syntax = "proto3";

package NetProto;

message NewConn {
    int32 fd = 1;
    uint32 ip = 2;
    uint32 port = 3;
}